--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:lmanzanillas@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/lmanzanillas">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/lmanzanillas">github.com/lmanzanillas</a></li>
 				</ul>
 			</footer>
 		</body>
