--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 				<li><a href="/mountains">Mountains</a></li>
+	        		<li><a href="/neutrinos">Neutrinos</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
